# Copyright 2016 Yahoo Inc. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
vespa_install_script(src/start-cbinaries.sh getvespaconfig bin)
vespa_install_script(src/start-cbinaries.sh vds-document-statistics bin)
vespa_install_script(src/start-cbinaries.sh vdsgetclusterstate bin)
vespa_install_script(src/start-cbinaries.sh vdsgetnodestate bin)
vespa_install_script(src/start-cbinaries.sh vdsgetsystemstate bin)
vespa_install_script(src/start-cbinaries.sh vdssetnodestate bin)
vespa_install_script(src/start-cbinaries.sh vdsstat bin)
vespa_install_script(src/start-cbinaries.sh vespa-verify-ranksetup bin)
vespa_install_script(src/start-cbinaries.sh vespa-config-status bin)
vespa_install_script(src/start-cbinaries.sh vespadoclocator bin)
vespa_install_script(src/start-cbinaries.sh vespaget bin)
vespa_install_script(src/start-cbinaries.sh vespa-model-inspect bin)
vespa_install_script(src/start-cbinaries.sh vespa-proton-cmd bin)
vespa_install_script(src/start-cbinaries.sh vespa-query-profile-dump-tool bin)
vespa_install_script(src/start-cbinaries.sh vesparoute bin)
vespa_install_script(src/start-cbinaries.sh vespa-transactionlog-inspect bin)
vespa_install_script(src/start-cbinaries.sh vespavisit bin)
vespa_install_script(src/start-cbinaries.sh vespavisittarget bin)
vespa_install_script(src/start-cbinaries.sh distributord sbin)
vespa_install_script(src/start-cbinaries.sh vespa-fdispatch sbin)
vespa_install_script(src/start-cbinaries.sh filedistributor sbin)
vespa_install_script(src/start-cbinaries.sh vespa-proton sbin)
vespa_install_script(src/start-cbinaries.sh storaged sbin)

vespa_install_script(src/vespa-allow-downgrade-from-6-to-5.sh vespa-allow-downgrade-from-6-to-5 bin)
vespa_install_script(src/start-tool.sh vespa-start-tool.sh bin)

vespa_install_script(src/rhel-prestart.sh vespa-prestart.sh bin)
vespa_install_script(src/common-env.sh common-env.sh libexec/vespa)
vespa_install_script(src/start-vespa-base.sh start-vespa-base.sh libexec/vespa)
vespa_install_script(src/stop-vespa-base.sh stop-vespa-base.sh libexec/vespa)
vespa_install_script(src/vespa-start-configserver.sh vespa-start-configserver bin)
vespa_install_script(src/vespa-start-services.sh vespa-start-services bin)
vespa_install_script(src/vespa-stop-configserver.sh vespa-stop-configserver bin)
vespa_install_script(src/vespa-stop-services.sh vespa-stop-services bin)

configure_file(src/vespa.service.in src/vespa.service @ONLY)
configure_file(src/vespa-configserver.service.in src/vespa-configserver.service @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/vespa.service ${CMAKE_CURRENT_BINARY_DIR}/src/vespa-configserver.service DESTINATION etc/systemd/system)

install(FILES src/Defaults.pm DESTINATION lib/perl5/site_perl/Yahoo/Vespa)
