# Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.

vespa_install_script(src/start-tool.sh vespa-start-tool.sh bin)

vespa_install_script(src/rhel-prestart.sh vespa-prestart.sh bin)
vespa_install_script(src/common-env.sh common-env.sh libexec/vespa)
vespa_install_script(src/start-vespa-base.sh start-vespa-base.sh libexec/vespa)
vespa_install_script(src/stop-vespa-base.sh stop-vespa-base.sh libexec/vespa)
vespa_install_script(src/vespa-stop-configserver.sh vespa-stop-configserver bin)

configure_file(src/vespa.service.in src/vespa.service @ONLY)
configure_file(src/vespa-configserver.service.in src/vespa-configserver.service @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/vespa.service ${CMAKE_CURRENT_BINARY_DIR}/src/vespa-configserver.service DESTINATION etc/systemd/system)

install(FILES src/Defaults.pm DESTINATION lib/perl5/site_perl/Yahoo/Vespa)
install(FILES conf/java.security.override DESTINATION conf/vespa)

configure_file(conf/default-env.txt.in conf/default-env.txt @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/conf/default-env.txt DESTINATION conf/vespa)

install(DIRECTORY DESTINATION logs/vespa)
install(DIRECTORY DESTINATION logs/vespa/access)
install(DIRECTORY DESTINATION var/crash)
install(DIRECTORY DESTINATION var/db/vespa)
install(DIRECTORY DESTINATION var/db/vespa/config_server)
install(DIRECTORY DESTINATION var/db/vespa/config_server/serverdb)
install(DIRECTORY DESTINATION var/db/vespa/config_server/serverdb/tenants)
install(DIRECTORY DESTINATION var/db/vespa/download)
install(DIRECTORY DESTINATION var/db/vespa/filedistribution)
install(DIRECTORY DESTINATION var/db/vespa/index)
install(DIRECTORY DESTINATION var/db/vespa/search)
install(DIRECTORY DESTINATION var/db/vespa/tmp)
install(DIRECTORY DESTINATION var/jdisc_container)
install(DIRECTORY DESTINATION var/run)
install(DIRECTORY DESTINATION var/tmp/vespa)
install(DIRECTORY DESTINATION var/vespa)
install(DIRECTORY DESTINATION var/vespa/application)
install(DIRECTORY DESTINATION var/vespa/bundlecache)
install(DIRECTORY DESTINATION var/vespa/bundlecache/configserver)
install(DIRECTORY DESTINATION var/vespa/cache)
install(DIRECTORY DESTINATION var/vespa/cache/config)
install(DIRECTORY DESTINATION var/zookeeper)
install(DIRECTORY DESTINATION var/zookeeper/version-2)
