vespa_add_module_dependency(slobrok_slobrokserver)
vespa_add_module_dependency(messagebus)
add_subdirectory(src/binref)
add_subdirectory(src/tests/compile-cpp)
add_subdirectory(src/tests/compile-java)
add_subdirectory(src/tests/error)
add_subdirectory(src/tests/errorcodes)
add_subdirectory(src/tests/speed)
add_subdirectory(src/tests/trace)
