# Copyright 2017 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
vespa_add_library(configdefinitions
    SOURCES
    INSTALL lib64
    DEPENDS
)
vespa_generate_config(configdefinitions application-id.def)
install(FILES application-id.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions attributes.def)
install(FILES attributes.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions cluster-info.def)
install(FILES cluster-info.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions cluster-list.def)
install(FILES cluster-list.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions cluster-member-info.def)
install(FILES cluster-member-info.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions configserver.def)
install(FILES configserver.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions dispatch.def)
install(FILES dispatch.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions fleetcontroller.def)
install(FILES fleetcontroller.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions ilscripts.def)
install(FILES ilscripts.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions imported-fields.def)
install(FILES imported-fields.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions indexschema.def)
install(FILES indexschema.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions lb-services.def)
install(FILES lb-services.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions load-type.def)
install(FILES load-type.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions messagetyperouteselectorpolicy.def)
install(FILES messagetyperouteselectorpolicy.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions model.def)
install(FILES model.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions persistence.def)
install(FILES persistence.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions rank-profiles.def)
install(FILES rank-profiles.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions routing-provider.def)
install(FILES routing-provider.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions sentinel.def)
install(FILES sentinel.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions slobroks.def)
install(FILES slobroks.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions specialtokens.def)
install(FILES specialtokens.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions stor-devices.def)
install(FILES stor-devices.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions stor-distribution.def)
install(FILES stor-distribution.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions stor-filestor.def)
install(FILES stor-filestor.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions stor-memfilepersistence.def)
install(FILES stor-memfilepersistence.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions summary.def)
install(FILES summary.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions summarymap.def)
install(FILES summarymap.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions upgrading.def)
install(FILES upgrading.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions ymon.def)
install(FILES ymon.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions zookeeper-server.def)
install(FILES zookeeper-server.def DESTINATION var/db/vespa/config_server/serverdb/classes)
vespa_generate_config(configdefinitions zookeepers.def)
install(FILES zookeepers.def DESTINATION var/db/vespa/config_server/serverdb/classes)
