# Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
add_subdirectory(advancedrouting)
add_subdirectory(auto-reply)
add_subdirectory(blob)
add_subdirectory(bucketsequence)
add_subdirectory(choke)
add_subdirectory(configagent)
add_subdirectory(context)
add_subdirectory(emptyreply)
add_subdirectory(error)
add_subdirectory(identity)
add_subdirectory(messagebus)
add_subdirectory(messageordering)
add_subdirectory(messenger)
add_subdirectory(protocolrepository)
add_subdirectory(queue)
add_subdirectory(replygate)
add_subdirectory(resender)
add_subdirectory(result)
add_subdirectory(retrypolicy)
add_subdirectory(routable)
add_subdirectory(routablequeue)
add_subdirectory(routeparser)
add_subdirectory(routing)
add_subdirectory(routingcontext)
add_subdirectory(routingspec)
add_subdirectory(rpcserviceaddress)
add_subdirectory(sendadapter)
add_subdirectory(sequencer)
add_subdirectory(serviceaddress)
add_subdirectory(servicepool)
add_subdirectory(shutdown)
add_subdirectory(simple-roundtrip)
add_subdirectory(simpleprotocol)
add_subdirectory(slobrok)
add_subdirectory(sourcesession)
add_subdirectory(targetpool)
add_subdirectory(throttling)
add_subdirectory(timeout)
add_subdirectory(trace-roundtrip)
